  - Fixed bug in Farly::Transport::Protocol::intersects()
  - Fixed bug in ::ASA::Parser names rule
  - Added Line number printing in ASA.tt
  - "DIGIT" and "ICMP_TYPE" Token to Object::KVC::Integer
  
0.05 - 25 February 2012
  - Fixed asa_Parser.t names test
  
0.06 - June 2012
  - documentation tweaks
  - 'intersects' method bug fix in ::IPv4::Object, ::Transport::Object, ::Transport::Protocol
  - ::IPv4 constructor refactoring, error checking and error testing 
  - ::Protocol and ::Port error checking
  - made ::IPv4::Address, ::Transport::Port, ::Transport::Protocol blessed 'SCALAR'ref
  - added rules.t
  - added Optimizer.pm and optimizer.t
  - rewrite asa_Annotator.t and asa_TokenPicker.t
  - replaced "Farly::ASA::Template" with "Farly::Template::Cisco"
  - removed ASA specific formatters from "Farly::Template::Cisco"
  - moved ASA/ASA.tt to 'Farly/Template/Files/ASA'
  - added "REMOVE" property and corresponding ASA template updates

0.07 - June 2012
  - Fixed documentation mistakes

0.08 - September 2012
  - Added port 'gt' and port 'lt' support, Farly::Transport::PortGT 
    and Farly::Transport::PortLT
  - Added Farly::IPv4::ICMPType 
  - Added integer to text formatter plugin's to Farly::Template::Cisco
  - Added Farly::Opts::Search, Farly::Remove::Rule, Farly::Remove::Address
    and corresponding unit tests
  - First release of "Farly Script Tools" f_search.pl, f_analyze.pl, 
    f_remove.pl

0.09 - October 2012
  - Fixed documentation mistakes
  - Improved Makefile.PL
  - Fixed bug in Farly::Remove::Address
  - Added 'route' support
 
0.10 - November 2012
  - Fixed documentation mistakes
  - Pod tests
  - ::ASA::Parser route bug fix
  - Makefile.PL BUILD_REQUIRES Test::Simple and Test::More

0.11 - November 2012
   - ::ASA::Parser acl_logging token type to acl_log_level
   - added MEMBER_TYPE imaginary token inserts in ::ASA::Parser
   - added ::ASA::Rewriter.pm and ::ASA::Generator.pm
   - changed route DESTINATION to DST_IP