@@ -15,7 +15,7 @@ my $importer = Farly->new();
 
 my $container = $importer->process( "ASA", "$path/test.cfg" );
 
-ok( $container->size() == 43, "import");
+ok( $container->size() == 45, "import");
 
 use Farly::Rules;
 
