@@ -216,7 +216,7 @@ $if_ref_inside->set( "ID",    Object::KVC::String->new("inside") );
 my $ce15 = Object::KVC::Hash->new();
 $ce15->set( "ENTRY",        Object::KVC::String->new("ROUTE") );
 $ce15->set( "INTERFACE",    $if_ref_inside );
-$ce15->set( "DESTINATION",  Farly::IPv4::Network->new('192.168.0.1 255.255.255.0'));
+$ce15->set( "DST_IP",  Farly::IPv4::Network->new('192.168.0.1 255.255.255.0'));
 $ce15->set( "NEXTHOP",      Farly::IPv4::Address->new('192.168.1.1'));
 $ce15->set( "COST",         Object::KVC::Integer->new("1") );
 $ce15->set( "TRACK",        Object::KVC::Integer->new("20") );
@@ -226,7 +226,7 @@ $container->add($ce15);
 my $ce16 = Object::KVC::Hash->new();
 $ce16->set( "ENTRY",        Object::KVC::String->new("ROUTE") );
 $ce16->set( "INTERFACE",    $if_ref_inside );
-$ce16->set( "DESTINATION",  Farly::IPv4::Network->new('0.0.0.0 0.0.0.0'));
+$ce16->set( "DST_IP",  Farly::IPv4::Network->new('0.0.0.0 0.0.0.0'));
 $ce16->set( "NEXTHOP",      Farly::IPv4::Address->new('192.168.0.1'));
 $ce16->set( "COST",         Object::KVC::Integer->new("2") );
 $ce15->set( "TUNNELED",     Object::KVC::String->new("tunneled") );
