@@ -1,6 +1,6 @@
 hostname test_fw
 name 192.168.10.0 net1
-name 192.168.10.1 server1
+name 192.168.10.1 server1 description Test web server
 banner motd a banner
 interface Vlan2
  nameif outside
